--- a/share/revng/test/configuration/revng-qa/for-decompilation.yml
+++ b/share/revng/test/configuration/revng-qa/for-decompilation.yml
@@ -5,6 +5,7 @@ tags:
         - -fno-inline
         - -O2
         - -shared
+        - -fvisibility=protected
 sources:
   - tags: [dynamic, native, for-decompilation]
     members:
